# icm20948-i2c

./: CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig
.github/workflows/: cmake-esp-idf-platform.yml
components/icm20948/: CMakeLists.txt  CMakeLists.txt.old  icm20948_driver.c  icm20948_hal.c  icm20948_hal.h  paper_plane.stl  requirements.txt  sensor.c  sensor.h  system.c  system.h  visualise_dmp.py
components/icm20948/Invn/Common/: invn_types.h
components/icm20948/Invn/Devices/: Sensor.c  SensorConfig.h  SensorTypes.h
components/icm20948/Invn/Devices/Drivers/Ak0991x/: Ak0991x.h  Ak0991xSerif.h
components/icm20948/Invn/Devices/Drivers/ICM20948/: Icm20948.h  Icm20948Augmented.c  Icm20948Augmented.h  Icm20948DataBaseControl.c  Icm20948DataBaseControl.h  Icm20948DataBaseDriver.c  Icm20948DataConverter.c  Icm20948Dmp3Driver.c  Icm20948LoadFirmware.c  Icm20948MPUFifoControl.c  Icm20948MPUFifoControl.h  Icm20948SelfTest.c  Icm20948Serif.h  Icm20948Setup.c
components/icm20948/Invn/DynamicProtocol/: DynProtocol.c  DynProtocol.h  DynProtocolTransport.h  DynProtocolTransportUart.c
components/icm20948/Invn/EmbUtils/: Message.c  Message.h
components/icm20948/include/: icm20948_driver.h  icm20948_hal.h  sensor.h  system.h
main/: main.c
